form visibility and validation behavior fixes

--- a/src/webapp/scss/_tree_nodes.scss
+++ b/src/webapp/scss/_tree_nodes.scss
@@ -79,7 +79,19 @@
 
     .options {
         border-top: 1px solid $page-section-divide;
-        padding-top: 15px;        
+        padding-top: 15px;
+        .left, .right {
+            display: inline-block;
+        }
+        .left {
+            text-align: left;
+            max-width: 250px;
+            float: left;
+            svg { color: $alert-err-bg; }
+        }
+        .right {
+            text-align: right;
+        }
     }
 
 }
